test/io/ferguson/bits-errors.big-writebits.good
bits-errors.chpl:33: error: halt reached - writebits nbits=9 > bits in v:uint(8)
